[JSC] Fix printEachOSRExit option rdar://108370641 https://bugs.webkit.org/show_bug.cgi?id=255793

Reviewed by Yusuke Suzuki.

printEachOSRExit should support for FTL OSR exits.

* Source/JavaScriptCore/ftl/FTLOSRExitCompiler.cpp:
(JSC::FTL::compileStub):

Canonical link: https://commits.webkit.org/263705@main